# ALPR

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PLATE_RECOGNIZER_API.md  README.md  app.py  config.yaml  install_dependencies.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/fixtures/: README.md  manifest.template.json
docs/: V2_VALIDATION.md
src/: __init__.py  config_manager.py  constants.py  detector.py  geometric_normalizer.py  plate_patterns.py  premium_alpr.py  preprocessor.py  temporal_voting.py  validator.py  video_processor.py
src/ocr/: __init__.py  base.py  confidence.py  manager.py  paddle_engine.py  types.py
src/v2/: __init__.py  application.py  config.py  contracts.py  evaluation.py  forensics.py  models.py  ollama_validation.py  pipeline.py  premium.py  quality.py  reporting.py  state.py
src/v2/ui/: __init__.py  display.py  sidebar.py
tests/: conftest.py  test_app_entrypoint.py  test_app_flow.py  test_config_manager.py  test_constants.py  test_detector.py  test_geometric_normalizer.py  test_ocr_manager.py  test_paddle_engine.py  test_premium_alpr.py  test_preprocessor.py  test_preprocessor_adaptive.py  test_temporal_voting.py  test_v2_application.py  test_v2_config.py  test_v2_evaluation.py  test_v2_models.py  test_v2_ollama_validation.py  test_v2_pipeline.py  test_v2_premium.py  test_v2_state.py  test_v2_ui_display.py  test_v2_video_flow.py  test_validator.py  test_video_processor.py
